apps/base/homepage/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homepage
  namespace: default
  labels:
    app.kubernetes.io/name: homepage
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3001
      protocol: TCP
  selector:
    app.kubernetes.io/name: homepage
